--- a/literature.bib
+++ b/literature.bib
@@ -57761,3 +57761,10 @@ African Linguistics",
 	year="1992"
 }
 
+@book{yeon2010korean,
+	title="Korean: A Comprehensive Grammar",
+	author="Jaehoon {Yeon} and Lucien {Brown}",
+	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1524128662",
+	year="2010"
+}
+
