Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -620,32 +620,32 @@ Frequent morphemes:
 \begin{table}
 \begin{tabular}{llllllllll}
 Slot & Identifier in our code & Short & Frequency & Description & Citation \\ \hline\hline
-Derivation & DERIVATION-adj-\korean{하} & HA$_2$ &	 68 & \citep[4.1.2]{yeon2010korean}\\
-& DERIVATION-predicative-i & I$_2$ &	 3947 & \citep[4.1.4]{yeon2010korean} \\ \hline
-Honorific & HONORIFIC-honorific-s 	& SI$_3$ & 99 & \citep[4.3.2, 4.4.1]{yeon2010korean}\\\hline
-Tense/Aspect &TENSE/ASPECT-remote-past-\korean{었었} 	& ESSESS$_4$ &  56& \citep[4.5.1.2]{yeon2010korean} \\
-&TENSE/ASPECT-assertive/strong-will-get 	& GET$_4$ & 355 & \citep[4.5.2.1]{yeon2010korean}\\
-&TENSE/ASPECT-past &ESS$_4$ &	 9720 & \citep[4.5.1.1]{yeon2010korean}\\\hline
-Formality & FORMALITY-formal-polite-p &P$_5$ &	 1761 & \citep[4.3.2]{yeon2010korean}\\\hline
-Mood 1&SYNTACTICMOOD-I-guess-ri & RI$_6$ &	 70 \\
-&SYNTACTICMOOD-formal-polite-ni 	&NI$_6$ & 1700 & \citep[4.3.2]{yeon2010korean}\\
-&SYNTACTICMOOD-indicative-n 	&N$_6$ &5069 \\\hline
-Mood 2&PRAGMATICMOOD-hortative-formal-polite-sida & SIDA$_7$ & 	 51 & Hortative, formal, polite \\
-& PRAGMATICMOOD-indicative-informal-\korean{어} 	& EO$_7$ & 62 & Indicative, informal\\
-& PRAGMATICMOOD-hortative-formal-nonpolite-\korean{자} & JA$_7$&	 163 & Hortative, formal, nonpolite \\
-& PRAGMATICMOOD-declarative-haoche-\korean{소} &SO$_7$  &	 194 & Declarative, informal\\
-& PRAGMATICMOOD-interrogative-lkka & LKKA$_7$&	 200 & Interrogative \\
-& ?????-ef-\korean{오} & O$_7$ &	 226 \\
-& PRAGMATICMOOD-ji & JI$_7$ &	 260 & \citep[4.2.2-3]{yeon2010korean}\\
-& PRAGMATICMOOD-interrogative-ka 	& KA$_7$ & 485 & Interrogative & \\
-& PRAGMATICMOOD-ra &RA$_7$ &	 959 & & \\
-& PRAGMATICMOOD-declarative-da & DA$_7$ &	 23035 & Declarative & \citep[4.3.2]{yeon2010korean}\\\hline
+Derivation & adj-\korean{하} & HA$_2$ &	 68 & \citep[4.1.2]{yeon2010korean}\\
+& predicative-i & I$_2$ &	 3947 & \citep[4.1.4]{yeon2010korean} \\ \hline
+Honorific & honorific-s 	& SI$_3$ & 99 & \citep[4.3.2, 4.4.1]{yeon2010korean}\\\hline
+Tense/Aspect & remote-past-\korean{었었} 	& ESSESS$_4$ &  56& \citep[4.5.1.2]{yeon2010korean} \\
+&assertive/strong-will-get 	& GET$_4$ & 355 & \citep[4.5.2.1]{yeon2010korean}\\
+&past &ESS$_4$ &	 9720 & \citep[4.5.1.1]{yeon2010korean}\\\hline
+Formality & formal-polite-p &P$_5$ &	 1761 & \citep[4.3.2]{yeon2010korean}\\\hline
+Mood 1&I-guess-ri & RI$_6$ &	 70 \\
+&formal-polite-ni 	&NI$_6$ & 1700 & \citep[4.3.2]{yeon2010korean}\\
+&indicative-n 	&N$_6$ &5069 \\\hline
+Mood 2&hortative-formal-polite-sida & SIDA$_7$ & 	 51 & Hortative, formal, polite \\
+& indicative-informal-\korean{어} 	& EO$_7$ & 62 & Indicative, informal\\
+& hortative-formal-nonpolite-\korean{자} & JA$_7$&	 163 & Hortative, formal, nonpolite & \citep[4.3.6.3]{yeon2010korean}\\
+& declarative-haoche-\korean{소} &SO$_7$  &	 194 & Declarative, informal\\
+& interrogative-lkka & LKKA$_7$&	 200 & Interrogative & \citep[8.9]{yeon2010korean} \\
+& semiformal-\korean{오} & O$_7$ &	 226 \\
+& ji & JI$_7$ &	 260 &    & \citep[4.2.2-3]{yeon2010korean}\\
+& interrogative-ka 	& KA$_7$ & 485 & Interrogative & \citep[4.3.4, p. 175; p. 183]{yeon2010korean} \\
+& ra &RA$_7$ \korean{라} &	 959 & plain style command & \citep[4.3.6.4]{yeon2010korean} \\
+& declarative-da & DA$_7$ &	 23035 & Declarative & \citep[4.3.2]{yeon2010korean} &  \\\hline
 Polite & POLITE-polite-\korean{요} & YO$_8$&	 267 \\
 \end{tabular}
 \caption{Frequent Korean verb suffixes in slots 1-8.}\label{tab:korean-frequent-morphemes}
 \end{table}
 
-
+Infinitive -eo: -eora/-ara for imperative \citep[4.3.6.4]{yeon2010korean}
 
 
 Next, we explain how our segmentation corresponds to commonly described paradigms.
@@ -732,6 +732,139 @@ NOMINALIZER-nominalizer-informal-nonpolite-gi & GI &	 151 \\
 NOMINALIZER-nominalizer-formal-nonpolite-m 	& M & 216 \\
 \end{longtable}
 
+
+\subsection{Turkish Verb Suffixes}
+
+\url{https://en.wiktionary.org/wiki/yapmak#Turkish}
+
+\begin{table}
+\begin{tabular}{ll||llllllllllllll}
+         &        & 1       & 2        & 3        & 1      & 2      & 3 \\ \hline\hline
+ DNP & A & yaparım & yaparsın &  	yapar & yaparız & yaparsınız &  	yaparlar \\
+                    &  & -AR-IM & -AR-SIN &  	-AR & -AR-IZ & -AR-SINIZ &  	-AR-LAR \\ \hline
+                & I & yapıyorum & yapıyorsun & 	yapıyor &	yapıyoruz &	yapıyorsunuz &	yapıyorlar \\
+                &  & -IYOR-UM & -IYOR-SUN & 	-IYOR &	-IYOR-UZ &	-IYOR-SINIZ &	-IYOR-LAR \\ \hline
+                & Pr  & yapacağım &	yapacaksın 	& yapacak 	& yapacağız &	yapacaksınız &	yapacaklar \\ 
+                &   & -ACAK-IM &	-ACAK-SIN 	& -ACAK 	& -ACAK-IZ &	-ACAK-SINIZ &	-ACAK-LAR \\ \hline\hline
+        DP    & Pe &yaptım &	yaptın &	yaptı &	yaptık &	yaptınız &	yaptılar \\
+              &  &-TI-IM &	-TI-SIN &	-TI &	-TI-K &	-TI-SINIZ &	-TI-LAR \\ \hline
+                & I & yapıyordum &	yapıyordun &	yapıyordu &	yapıyorduk &	yapıyordunuz &	yapıyorlardı \\ 
+                &  & -IYOR-DU-IM &	-IYOR-DU-SIN &	-IYOR-DU &	-IYOR-DU-K &	-IYOR-DU-SINIZ &	-IYOR-LAR-DU \\ \hline\hline
+ I     & Pe & yapmışım &	yapmışsın &	yapmış &	yapmışız &	yapmışsınız &	yapmışlar \\
+       &  & -MIS-IM &	-MIS-SIN &	-MIS &	-MIS-IZ &	-MIS-SINIZ &	-MIS-LAR \\ \hline
+               & A & yaparmışım &	yaparmışsın &	yaparmış &	yaparmışız &	yaparmışsınız& 	yaparlarmış \\ 
+            &  & -AR-MIS-IM &	-AR-MIS-SIN &	-AR-MIS &	-AR-MIS-IZ &	-AR-MIS-SINIZ& 	-AR-LAR-MIS \\ \hline
+               & I & yapıyormuşum &	yapıyormuşsun &	yapıyormuş &	yapıyormuşuz &	yapıyormuşsunuz &	yapıyorlarmuş \\
+               &              & -IYOR-MUS-IM &	-IYOR-MUS-SUN &	-IYOR-MUS &	-IYOR-MUS-UZ &	-IYOR-MUS-SUNUZ &	-IYOR-LAR-MUS \\
+\end{tabular}
+\caption{Turkish}
+\end{table}
+
+\begin{table}
+\begin{tabular}{llllllll}
+\hline
+Voice \\
+\hline
+Negation  & MA & Negation & \\
+\hline
+Mood      & AR & Aorist, nonpast, direct \\
+          & IYOR & Imperfective, direct & Aspect=Prog\\
+          & ACAK & Prospective, nopast, direct\\
+          & MIS1  & Perfective, indirect \\
+          & TI & Perfective, past, direct \\
+          \hline
+3rd Plural& LAR & 3rd Plural\\ \hline
+Mood      & MUS2 & Aorist/Imperfective, indirect \\
+          & DU & imperfective, past, direct \\
+\hline
+Agreement & IM & 1st singular\\
+          & SIN &2nd singular\\
+          & IZ  & 1st plural\\
+          & SINIZ & 2nd plural \\
+          & K     & 1st plural, past direct \\
+          \hline
+Formality \\
+\hline
+\end{tabular}
+\caption{Suffixes in Turkish}
+\end{table}
+
+\subsection{Hungarian Verb Suffixes}
+
+\url{https://en.wiktionary.org/wiki/tesz#Hungarian}
+\url{https://en.wiktionary.org/wiki/csinál}
+\url{https://en.wiktionary.org/wiki/ismer#Hungarian}
+
+\begin{table}[]
+    \centering
+    \begin{tabular}{lll||llllllllllllllll}
+    &    & &  1 & 2 & 3 & 1 & 2 & 3 \\ \hline
+Ind & Pres   &  I    & teszek &	teszel &	tesz &	teszünk &	tesztek &	tesznek \\
+    &        &       & csinálok &	csinálsz &	csinál &	csinálunk &	csináltok &	csinálnak \\
+   &&&  ismerek &	ismersz &	ismer &	ismerünk &	ismertek &	ismernek \\
+ &    &      & -EK &	-EL &	- &	-UNK &	-TEK &	-NEK \\ \hline
+   &&  D    & teszem &	teszed &	teszi &	tesszük &	teszitek &	teszik \\
+   &&       & csinálom &	csinálod &	csinálja &	csináljuk &	csináljátok &	csinálják \\
+  &&& ismerem &	ismered &	ismeri &ismerjük &	ismeritek &	ismerik \\
+&&      & -EM &	-ED &	-E &	-I-UK &	-I-TEK &	-I-EK \\ \hline
+   &&      & teszlek \\ \hline\hline
+& Past &     I    &tettem &	tettél &	tett &	tettünk &	tettetek &	tettek \\
+&      &          & csináltam &	csináltál &	csinált &	csináltunk &	csináltatok &	csináltak \\
+&&&ismertem &	ismertél &	ismert &	ismertünk &	ismertetek &	ismertek \\
+&  &         &-T-EM &	-T-EL &	-T &	-T-UNK &	-T-TEK &	-T-NEK \\ \hline
+ & &   D    &tettem &	tetted &	tette &	tettük &	tettétek &	tették \\
+ & &        & csináltam &	csináltad &	csinálta &	csináltuk &	csináltátok &	csinálták \\
+&&& ismertem &	ismerted &	ismerte &	ismertük &	ismertétek 	&ismerték \\
+ & &       &-T-EM &	-T-ED &	-T-E &	-T-UK &	-T-I-TEK &	-T-EK \\ \hline
+  &&       &tettelek \\ \hline
+Cond  &Pres &   I    &tennék &	tennél &	tenne &	tennénk &	tennétek &	tennének \\
+      &     &        & csinálnék &	csinálnál &	csinálna &	csinálnánk 	&csinálnátok &	csinálnának \\
+  &&&    ismernék &	ismernél &	ismerne &	ismernénk &	ismernétek &	ismernének \\
+  & &   I    &-N-EK &	-N-EL &	-N &	-N-ENK &	-N-TEK &	-N-NEK \\\hline
+   &&  D    &tenném &	tennéd &	tenné &	tennénk &	tennétek &	tennék \\
+   &&       & csinálnám &	csinálnád &	csinálná &	csinálnánk &	csinálnátok &	csinálnák \\
+ &&&  ismerném &	ismernéd &	ismerné &	ismernénk 	&ismernétek &	ismernék \\
+&&      &-N-EM &	-N-ED &	-N-E &	-N-ENK &	-N-TEK &	-N-EK \\ \hline
+       &&  &tennélek \\ \hline
+Subj & Pres & I         &tegyek &	tégy or tegyél &	tegyen &	tegyünk &	tegyetek &	tegyenek \\
+     &      &           & csináljak &	csinálj or
+csináljál &	csináljon &	csináljunk& 	csináljatok &	csináljanak \\
+&&&ismerjek &	ismerj or
+ismerjél &	ismerjen &	ismerjünk &	ismerjetek &	ismerjenek \\
+ &  &          &-J-EK &	-J or -J-EL &	-J-EN &	-J-UNK &	-J-TEK &	-J-NEK \\ \hline
+&&D         &tegyem &	tedd or tegyed &	tegye &	tegyük& 	tegyétek &	tegyék \\
+&&          & csináljam &	csináld or
+csináljad &	csinálja &	csináljuk &	csináljátok &	csinálják \\
+&&&ismerjem &	ismerd or
+ismerjed &	ismerje &	ismerjük &	ismerjétek & ismerjék
+ \\
+&&         &-J-EM &	-ED or -J-ED &	-J-E &	-J-UK & 	-J-I-TEK &	-J-I-EK \\ \hline
+  &&       &tegyelek \\
+    \end{tabular}
+    \caption{Hungarian verb suffixes (tense, mood, definitiness, person/number).}
+    \label{tab:my_label}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{lllllllll}
+Mood/Tense& T & indicative past \\
+         & N & conditional \\
+         & J & subjunctive \\
+         \hline
+Definiteness & I & definite 2/3pl \\
+         \hline
+Agreement/Definiteness/Tense         & EK & 1sg indefinite present\\
+         & EL & 2sg present\\
+         & UNK & 1pl present\\
+         & TEK & 2pl\\
+         & NEK & 3pl present\\
+         & EM & 1sg past or definite \\
+         & ED & 2sg definite \\
+    \end{tabular}
+    \caption{Caption}
+    \label{tab:my_label}
+\end{table}
 
 \end{document}
 
