--- a/name.tex
+++ b/name.tex
@@ -664,12 +664,12 @@ Formal      &  \korean{ㅂ니다} & \korean{ㅂ니까} & \korean{지-ㅂ-지오}
 Polite      &  \multicolumn{4}{c}{\korean{아/어/요}}  \\
       &  \multicolumn{4}{c}{-a/eo/yo}  \\
             & \multicolumn{4}{c}{-A/EO/YO} \\ \hline
-Semi-Formal & \korean{오/조}   &           &   \korean{오}       &  \korean{-ㅂ-지다} \\
+Semi-Formal & \korean{오/소}   &           &   \korean{오}       &  \korean{-ㅂ-지다} \\
 &  -o/so   &           & -o        & -p-sida \\
- &  -O$_7$/-SO   &           & -O$_7$    & -P$_5$-SIDA$_7$ \\\hline
-Familiar    &    \korean{네}    &  \korean{나/는자} &  \korean{게}      &    \korean{세} \\
-            & -ne                  & -na/neunja & -ge & -se \\ 
-            & -NE$_7$                  & -NA/-NEUNJA$_7$ & -GE & -SE \\ \hline
+ &  -O$_7$/-SO$_7$   &           & -O$_7$    & -P$_5$-SIDA$_7$ \\\hline
+Familiar    &    \korean{네}    &  \korean{나/는가} &  \korean{게}      &    \korean{세} \\
+            & -ne                  & -na/neunka & -ge & -se \\ 
+            & -NE$_7$                  & -NA$_7$/-NEUNKA$_7$ & -GE$_9$ & \textcolor{red}{-SE} \\ \hline
 Intimate      &  \multicolumn{4}{c}{\korean{아/어}}  \\
       &  \multicolumn{4}{c}{-a/eo}  \\
             & \multicolumn{4}{c}{-A/EO$_7$} \\ \hline
@@ -688,28 +688,59 @@ We only show the forms without the honorific; forms with honorific are created b
            &          &Formal non-polite & Informal non-polite & Informal polite & Formal polite \\ \hline \hline
 \multirow{6}{*}{Indicative} & \multirow{3}{*}{Non-past} & \korean{한다} & \korean{해}  & \korean{해요}  & \korean{합니다}  \\
            &          & handa & hae & haeyo &  hamnida \\
-           &          & -N-DA & -- & -YO$_8$ &  -P$_5$-NI$_6$-DA$_7$ \\ \hline
+           &          & -N$_6$-DA$_7$ & -EO$_7$ & -EO$_7$-YO$_8$ &  -P$_5$-NI$_6$-DA$_7$ \\
+           &          & \korean{하+ㄴ다}  & \korean{하+어}    & \korean{하+어+요} & \korean{하+ㅂ니다} \\
+            &          &  px+ef        &   pvg+ecs        & pvg+ef+jxf & pvg+ef\\
+           \hline
            & \multirow{3}{*}{Past}     & \korean{했다}  & \korean{했어} & \korean{했어요}   & \korean{했습니다}  \\
            &      & haet-da &  haesseo &  haesseoyo  & haetseumnida \\
-           &      & -ESS$_4$-DA &  -ESS$_4$-EO &  -ESS$_4$-EO-YO$_8$  & -ESS$_4$-P$_5$-NI$_6$-DA$_7$ \\ \hline
+           &      & -ESS$_4$-DA &  -ESS$_4$-EO$_7$ &  -ESS$_4$-EO$_7$-YO$_8$  & -ESS$_4$-P$_5$-NI$_6$-DA$_7$ \\
+           &      &  \korean{하+었+다}  &  \korean{하+었+어} & \korean{하+었+어+요} & \korean{하+었+습니다}  \\
+           &      &  ncpa+xsv+ep+ef   & px+ep+ef   &   px+ep+ef+jxf &     pvg+ep+ef\\
+           \hline
 \multirow{6}{*}{Interrogative} & \multirow{3}{*}{Non-past} & \korean{하느냐} & \korean{해}  & \korean{해요}  & \korean{합니까} \\
  &  & haneunya &  hae &  haeyo & hamnikka\\
- &  & -NEUNYA$_7$ &  -- &  -YO$_8$ & -P$_5$-NIKKA$_7$ \\ \hline
+ &  & -NEUNYA$_7$ &  -EO$_7$ &  -EO$_7$-YO$_8$ & -P$_5$-NIKKA$_7$ \\
+               && \korean{하+느냐} & & & \korean{하+ㅂ니까}    \\
+              && px+ef & & & px+ef \\
+ \hline
               & \multirow{3}{*}{Past} & \korean{했느냐} & \korean{했어} & \korean{했어요} & \korean{했습니까} \\
               &  & ha-n-neunya &  hae-sseo &  hae-sseo-yo &  haetseumnikka\\
-              &  & -ESS$_4$-NEUNYA$_7$ &  -ESS$_4$ &  -ESS$_4$-YO &  -ESS$_4$-P$_5$-NIKKA$_7$\\ \hline
+              &  & -ESS$_4$-NEUNYA$_7$ &  -ESS$_4$-EO$_7$ &  -ESS$_4$-EO$_7$+YO$_8$ &  -ESS$_4$-P$_5$-NIKKA$_7$\\
+              &  &  \korean{하+었+느냐}  & \korean{하+었+어} & \korean{하+었+어+요} & \korean{하+었+습니까} \\
+              &  & +ep+ef  & +ep+ef            & px+ep+ef+jxf & pvg+ep+ef \\
+              \hline
 Hortative   && \korean{하자}  & \korean{해}  & \korean{해요}  & \korean{합시다}  \\
    && haja &  hae &  haeyo & hapsida \\
-   && -JA$_7$ &  -- &  -YO$_8$ & -P$_5$-SIDA$_7$ \\ \hline
+   && -JA$_7$ &  -EO$_7$ &  -EO$_7$-YO$_8$ & -P$_5$-SIDA$_7$ \\
+   && \korean{+자} && \korean{하+어+요} & \korean{하+ㅂ시다}\\
+   && +ef  && pvg+ef+jxf & ef \\
+   \hline
 Imperative  && \korean{해라, 하여라}  & \korean{해}  & \korean{해요}  & \korean{합시오}  \\
   && haera, hayeora &  hae &  haeyo &  hapsio \\
-  && -RA$_7$, -YEORA$_7$ &-- & -YO$_8$ & -P$_5$-SIO \\ \hline
+  && -EORA$_7$ & -EO$_7$ & -EO$_7$-YO$_8$ & -P$_5$-SIO \\
+  && \korean{하+어라}, \korean{하+어라}  &  &    & \korean{+ㅂ시오} \\
+  && pvg+ef,  pvg+ef                     &  &    &  +ef\\
+  \hline
 Assertive   && \korean{하겠다}  & \korean{하겠어}  & \korean{하겠어요}  & \korean{하겠습니다}  \\
-Assertive   &&  hagetda & hagesseo &  hagesseoyo & hagetseumnida \\
-Assertive   &&  -GESS$_4$-DA$_7$ & -GESS$_4$-EO$_7$ &  -GESS$_4$-EO$_7$-YO$_8$ & GESS$_4$-P$_5$-NI$_6$-DA$_7$ \\ \hline
+   &&  hagetda & hagesseo &  hagesseoyo & hagetseumnida \\
+   &&  -GESS$_4$-DA$_7$ & -GESS$_4$-EO$_7$ &  -GESS$_4$-EO$_7$-YO$_8$ & GESS$_4$-P$_5$-NI$_6$-DA$_7$ \\
+&& \korean{하+겠+다}  & \korean{하+겠+어}   & \korean{하+겠+어+요} & \korean{하+겠+습니다}\\
+&&  px+ep+ef          & pvg+ep+ef   & pvg+ep+ef+jxf & pvg+ep+ef\\
+\hline
+\end{tabular}
+	\caption{Correspondence between our morpheme segmentation and the paradigm of \textit{hada} `to do' as described by Wiktionary (retrieved September 16, 2020).}\label{tab:korean-hada}
+\end{table}
+
+\begin{table}
+\begin{tabular}{llllllllll}
+           &          &Formal non-polite & Informal non-polite & Informal polite & Formal polite \\ \hline \hline
 Cause/Reason && \korean{해} & \korean{해서, 하여서} & \korean{하니} & \korean{하니까} \\
 && hae & haeseo, hayeoseo & hani & hanikka \\ 
-&& -EO/A??? & -SEO$_9$, -YEOSEO$_9$ & -NI$_9$ & -NIKKA$_9$ \\ \hline
+&& -EO$_7$ & -EOSEO$_9$ & -NI$_9$ & -NIKKA$_9$ \\
+&& &\korean{하+어서, 하+어서} & \korean{하+니} & \korean{하+니까} \\
+&& & pvg+ecs, xsm+ecs         & pvg+ecs & xsm+ef \\
+\hline
 Contrast && \korean{하지만} & \korean{하는데} & \korean{하더니} \\
  && hajiman & haneunde & haedoni & \\ 
  && -JIMAN$_9$ & -NEUNDE$_9$ & -DEONI$_9$ & \\ \hline
@@ -718,7 +749,7 @@ Conjunction && \korean{하고} \\
 && -GO$_9$ \\ \hline
 Condition && \korean{하면} & \korean{해야, 하여야} \\
 && hamyeon & haeya, hayeoya \\
-&& MYEON$_9$ & YA$_9$, YEOYA$_9$ \\ \hline
+&& MYEON$_9$ & EOYA$_9$ \\ \hline
 Motive && \korean{하려고} \\
  && haryeogo \\
 && -RYEOGO$_9$
@@ -726,6 +757,68 @@ Motive && \korean{하려고} \\
 	\caption{Correspondence between our morpheme segmentation and the paradigm of \textit{hada} `to do' as described by Wiktionary (retrieved September 16, 2020).}\label{tab:korean-hada}
 \end{table}
 
+
+%itda \url{https://en.wiktionary.org/wiki/%EC%9E%88%EB%8B%A4#Korean}
+
+\begin{table}[]
+    \centering
+    \begin{tabular}{llllllllllllllllllllllllllllllllll}
+           &          &Formal non-polite & Informal non-polite & Informal polite & Formal polite \\ \hline \hline
+    \multirow{6}{*}{Indicative}         & Non-past  & \korean{있다} & \korean{있어} & \korean{있어요} & \korean{있습니다} \\
+         &  &  \korean{있+다} & \korean{있+어} & \korean{있+어+요} & \korean{있+습니다}\\
+         &  & +ef & +ef & +ef+jxf & +ef \\
+         \hline
+ & Past & \korean{있었다} & \korean{있었어} & \korean{있었어요} & \korean{있었습니다} \\
+         &  & \korean{있+었+다} & \korean{있+었+어} & \korean{있+었+어+요} & \korean{있+었+습니다}\\
+         &  & +ep+ef & +ep+ef & +ep+ef+jxf & +ep+ef \\
+         \hline
+\multirow{6}{*}{Interrogative} & Non-past  & \korean{있느냐} & \korean{있어} & \korean{있어요} & \korean{있습니까} \\
+         &  & \korean{있+느냐} & \korean{있+어} & \korean{있+어+요} & \korean{있+습니까}\\
+         &  & +ef              & +ef  & +ef+jxf & +ef\\
+         \hline
+         & Past & \korean{있었느냐} & \korean{있었어} & \korean{있었어요} & \korean{있었습니까} \\
+         &  & \korean{있+었+느냐} & \korean{있+었+어} & \korean{있+었+어+요}\\
+         &  & +ep+ef & paa+ep+ef &  paa+ep+ef+jxf\\
+         \hline
+\multirow{3}{*}{Assertive} &  & \korean{있겠다} & \korean{있겠어} & \korean{있겠어요} & \korean{있겠습니다} \\
+         &  & \korean{있+겠+다} & \korean{} & \korean{있+겠+어+요} & \korean{있+겠+습니다}\\
+         &  & +ep+f             &           & paa+ep+ef+jxf & paa+ep+ef\\
+    \end{tabular}
+    \caption{Conjugation of itda}
+    \label{tab:my_label}
+\end{table}
+
+\begin{table}[]
+    \centering
+    \begin{tabular}{llllllllllllllllllllllllll}
+           &          &Formal non-polite & Informal non-polite & Informal polite & Formal polite \\ \hline \hline
+\multirow{2}{*}{Indicative} & Non-past & \korean{하신다} & \korean{하셔} & \korean{하세요, 하셔요} & \korean{하십니다} \\
+                           && -SI-N-DA & SI-EO & SI-EO-YO & SI-P-NI-DA \\
+&& \korean{하+시+ㄴ다}       &   --   &    \korean{하+시+어+요}             &  \korean{하+시+ㅂ니다}        \\
+\hline
+&& \korean{하셨다} & \korean{하셨어} & \korean{하셨어요} & \korean{하셨습니다} \\
+&& SI-ESS-DA & SI-ESS-EO & SI-ESS-EO-YO & SI-ESS-P-NI-DA \\
+& & \korean{하+셨+다}       &  --    &        --        &  \korean{하+셨+습니다}       \\
+\hline
+\multirow{2}{*}{Interrogative} & Non-past & \korean{하시느냐} & \korean{하셔} & \korean{하세요, 하셔요} & \korean{하십니까} \\
+&& SI-NEUNYA & SI-EO & SI-EO-YO & SI-P-NIKKA \\
+& &   --     &   --   &   \korean{하+시+어+요}             &  --        \\
+\hline
+& Past & \korean{하셨느냐} & \korean{하셨어} & \korean{하셨어요} & \korean{하셨습니까} \\
+&      & SI-ESS-NEUNYA & SI-ESS-EO          & SI-ESS-EO-YO & SI-ESS-P-NIKKA \\
+& &        &      &                &          \\
+\hline
+\multirow{2}{*}{Imperative} && \korean{하시라} & \korean{하셔} & \korean{하세요} & \korean{하십시오} \\
+&& -SI-RA & -SI-EO & -SI-EO-YO & -SI-P-SIO \\
+&        &      & \korean{하+시+어+}               &   \korean{하+십시오}       \\
+\hline
+\multirow{2}{*}{Assertive} & & \korean{하시겠다} & \korean{하시겠어} & \korean{하시겠어요} & \korean{하시겠습니다} \\
+&        &  -SI-GESS-DA     &  -SI-GESS-EO              &  -SI-GESS-EO-YO & -SI-GESS-P-NI-DA        \\
+&& -- & -- & -- & -- \\
+    \end{tabular}
+    \caption{Korean conjugation (hada) with honorific.}
+    \label{tab:my_label}
+\end{table}
 
 
 \begin{table}[]
